[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-spread-regime-model"
version = "0.1.0"
description = "Institutional-grade deterministic credit spread regime model for macro risk classification."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Agora Lycos Trading Lab" }
]
keywords = [
  "quant",
  "macro",
  "credit spreads",
  "regime model",
  "risk-on",
  "risk-off",
  "systematic investing"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering"
]

dependencies = [
  "numpy>=1.26",
  "pandas>=2.2"
]

[project.optional-dependencies]
data = [
  "yfinance>=0.2.54",
  "fredapi>=0.5.2"
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0"
]
all = [
  "yfinance>=0.2.54",
  "fredapi>=0.5.2",
  "pytest>=8.0",
  "pytest-cov>=5.0"
]

[project.urls]
Homepage = "https://example.com/credit-spread-regime-model"
Repository = "https://example.com/credit-spread-regime-model"
Documentation = "https://example.com/credit-spread-regime-model/docs"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config"
]

[tool.coverage.run]
source = ["src/credit_spread_regime_model"]

[tool.coverage.report]
show_missing = true
skip_covered = false